# IntelligenceMaxxxing

./: .editorconfig  .env.example  .gitattributes  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/architecture/: CONSTITUTION_TRACEABILITY_MATRIX.md  EVENT_CATALOG.md  EVIDENCE_TEMPORAL_ANCHORS.md  EXPERIMENT_TERMINAL_STATE_MACHINE.md  IDENTITY_AND_PERMISSION_MODEL.md  OFFLINE_SYNC_CONTRACT.md  POSTGRES_APPEND_ONLY_ENFORCEMENT.md  PROJECTION_MODEL.md  RESEARCH_FACTORY_M3A_BOUNDARY_V1.md  SEMANTIC_EVIDENCE_IDEMPOTENCY.md  STREAM_HEAD_AND_QUARANTINE_MODEL.md  TRADINGMAXXXING_ADAPTER_BOUNDARY_V1.md  TRADING_M2_AGENTS_BOUNDARY_V1.md
docs/constitutional/: CONSTITUTIONAL_MANIFEST.sha256
docs/integrations/: LIFEMAXXXING_INTEGRATION.md  lifemaxxxing_compatibility_lock.json
docs/reviews/: ADVANCED_PERSONAL_WELLBEING_STATE_MODEL_V2_MASTER_REPORT.md  ENGINE_WELLBEING_V1_BASELINE_INVENTORY.md  IM_ASSESSMENT_IDEMPOTENCY_AND_POLICY_FREEZE_V1_REPORT.md  IM_DEEP_BOUNDARY_AND_IDEMPOTENCY_AUDIT_V2_REPORT.md  IM_DEEP_CODE_AND_BOUNDARY_TRUTH_AUDIT_V1_REPORT.md  M2_AGENT_RUN_CONTRACT_TRUTH_V1_REPORT.md  RESEARCH_EVIDENCE_AGENT_V1_REPORT.md  RESEARCH_EVIDENCE_BUNDLE_V1_REPORT.md  RESEARCH_EVIDENCE_REGISTRY_V1_REPORT.md  RESEARCH_EXPERIMENT_REGISTRY_V1_REPORT.md  RESEARCH_FACTORY_M3A_FOUNDATION_V1_MASTER_REPORT.md  RESEARCH_HYPOTHESIS_REGISTRY_V1_REPORT.md  RESEARCH_INFORMATION_VALUE_V1_REPORT.md  RESEARCH_LEARNING_MEMORY_V1_REPORT.md  RESEARCH_M3A_REGISTRY_QUALITY_V1_REPORT.md  RESEARCH_REPORT_AGENT_V1_REPORT.md  RESEARCH_SAFETY_AUDITOR_AGENT_V1_REPORT.md  STAGE_0_CONSTITUTIONAL_BACKEND_FOUNDATION_REPORT.md  STAGE_0_FOUNDATION_CONFLICTS.md  STAGE_1_1_ISOLATION_INTEGRITY_HARDENING_REPORT.md  STAGE_1_TRUSTED_CORE_LEDGER_REPORT.md  STAGE_2_LIFEMAXXXING_INTEGRATION_REPORT.md  STAGE_3_1_TEMPORAL_EVIDENCE_HARDENING_REPORT.md  STAGE_3_FIRST_EPISTEMIC_LOOP_REPORT.md  TMX_CONNECTIVITY_RECOVERY_V1_NOTE.md  TMX_IM_BOUNDARY_RUNTIME_PROOF_V2_REPORT.md  TMX_POST_REBOOT_RECOVERY_CANARY_V1_NOTE.md  TRADING_ANOMALY_AGENT_V1_REPORT.md  TRADING_ASSESSMENT_INGESTION_V1_REPORT.md  TRADING_CONTEXT_AGENT_V1_REPORT.md  TRADING_CRITIC_AGENT_V1_REPORT.md  TRADING_DECISION_POLICY_V1_REPORT.md  TRADING_EVIDENCE_CONTRACT_V1_REPORT.md  TRADING_HORIZON_ASSESSMENT_CONTRACT_V1_REPORT.md  TRADING_HORIZON_NOISE_AGENT_V1_REPORT.md  TRADING_M2_AGENT_BUNDLE_V1_REPORT.md  TRADING_M2_SHADOW_ADJUDICATION_V1_REPORT.md  TRADING_RETROSPECTIVE_ASSESSMENT_V1_REPORT.md  WELLBEING_APPEND_ONLY_INVALIDATION_V1.md  WELLBEING_CANONICAL_NORMALIZATION_V1.md  (+25 more)
docs/runbooks/: CREDENTIAL_BOOTSTRAP.md  EVIDENCE_DATA_QUALITY_INCIDENTS.md  INTEGRITY_VERIFICATION.md  LOCAL_DEVELOPMENT.md  LOCAL_TRADING_ASSESSMENT_SERVICE_V1.md  MIGRATION_SAFETY.md  POSTGRESQL_SETUP.md  PROJECTION_REBUILD.md
docs/wellbeing/: CONFIDENCE_SCORE_V2_MODEL_CARD.md  HAPPINESS_SCORE_V2_MODEL_CARD.md  STRESS_LOAD_V2_MODEL_CARD.md  WELLBEING_CALIBRATION_POLICY_V2.md  WELLBEING_FEATURE_REGISTRY_V2.md  WELLBEING_STATE_MODEL_V2_SPEC.md  WELLBEING_VALIDATION_PROTOCOL_V2.md
migrations/: env.py
migrations/versions/: 0001_stage0_event_store_and_audit.py  0002_stage1_trusted_core_ledger.py  0003_stage1_1_integrity_isolation_hardening.py  0004_stage3_first_epistemic_loop.py  0005_stage3_1_temporal_evidence_hardening.py  0006_wellbeing_v1.py  0007_wellbeing_v2_shadow.py  0008_observation_exclusion_registry.py
scripts/audit/: lifemaxxxing_e2e_canaries.py  run_benchmarks.ps1  run_lifemaxxxing_contract_gates.ps1  run_postgres_gates.ps1  run_quality_gates.ps1  run_stage3_1_temporal_evidence_gates.ps1  run_stage3_epistemic_gates.ps1  stage3_epistemic_e2e_canaries.py  verify_constitution.ps1  wellbeing_generate_effective_snapshots.py  wellbeing_live_closeout.py  wellbeing_observation_scale_audit.py  wellbeing_test_observation_audit.py
scripts/db/: safe_downgrade.ps1  upgrade.ps1
scripts/dev/: run_engine.ps1  setup_engine.ps1  start_postgres.ps1  stop_engine.ps1
scripts/projections/: rebuild_all.ps1  rebuild_epistemic.ps1  verify_epistemic.ps1  verify_projections.ps1
scripts/sdk/: build_client_sdk.ps1  test_client_sdk.ps1
scripts/smoke/: wellbeing_isolation_canary.py  wellbeing_isolation_e2e.ps1
sdk/python/: README.md  pyproject.toml
sdk/python/intelligence_maxxxing_client/: __init__.py  client.py  errors.py  models.py
sdk/python/tests/: test_client_unit.py
src/intelligence_maxxxing/: __init__.py
tests/: conftest.py
tests/benchmarks/: stage1_bounds.py
tests/constitutional/: test_append_only.py  test_boundary_protections.py  test_domain_pack_honesty.py  test_epistemic_contracts.py  test_idempotency.py  (+3 more)
(+243 files in other folders)
