[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "intelligence-maxxxing"
version = "0.1.0"
description = "IntelligenceMaxxxing Engine: constitutionally governed, application-agnostic intelligence backend"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "httpx>=0.27",
    "uvicorn>=0.30",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "import-linter>=2.0",
    "build>=1.2",
    "setuptools>=69",
    "wheel>=0.43",
]

[tool.setuptools.packages.find]
where = ["src", "sdk/python"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "sdk/python", "tests"]
extend-exclude = ["migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = ["src", "sdk/python"]
explicit_package_bases = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["alembic.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -m \"not postgres\""
markers = [
    "postgres: real PostgreSQL gates (run via scripts/audit/run_postgres_gates.ps1)",
]
filterwarnings = ["error::DeprecationWarning:intelligence_maxxxing.*"]

[tool.importlinter]
root_packages = ["intelligence_maxxxing", "intelligence_maxxxing_client"]
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Engine layered architecture (api -> application -> domain)"
type = "layers"
layers = [
    "intelligence_maxxxing.api",
    "intelligence_maxxxing.application",
    "intelligence_maxxxing.domain",
]

[[tool.importlinter.contracts]]
name = "Domain layer is pure Python (no web, ORM, network, infra)"
type = "forbidden"
source_modules = ["intelligence_maxxxing.domain"]
forbidden_modules = [
    "fastapi",
    "starlette",
    "sqlalchemy",
    "alembic",
    "httpx",
    "psycopg",
    "intelligence_maxxxing.api",
    "intelligence_maxxxing.application",
    "intelligence_maxxxing.infrastructure",
    "intelligence_maxxxing.contracts.api",
]

[[tool.importlinter.contracts]]
name = "Application layer never depends on concrete infrastructure"
type = "forbidden"
source_modules = ["intelligence_maxxxing.application"]
forbidden_modules = [
    "intelligence_maxxxing.infrastructure",
    "intelligence_maxxxing.api",
    "sqlalchemy",
    "fastapi",
]

[[tool.importlinter.contracts]]
name = "Public SDK never imports the Engine Core"
type = "forbidden"
source_modules = ["intelligence_maxxxing_client"]
forbidden_modules = ["intelligence_maxxxing", "sqlalchemy", "fastapi"]

[[tool.importlinter.contracts]]
name = "Engine Core never imports the SDK or external applications"
type = "forbidden"
source_modules = ["intelligence_maxxxing"]
forbidden_modules = ["intelligence_maxxxing_client"]
